--- a/packages/@unimodules/react-native-adapter/package.json
+++ b/packages/@unimodules/react-native-adapter/package.json
@@ -14,6 +14,9 @@
     "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module"
   },
+  "bin": {
+    "react-native-unimodules": "scripts/bin.js"
+  },
   "keywords": [
     "react-native",
     "unimodules",
@@ -42,14 +45,18 @@
     "unimodules-permissions-interface": "*"
   },
   "dependencies": {
+    "chalk": "^3.0.0",
+    "fs-extra": "^8.1.0",
+    "glob": "^7.1.6",
+    "inquirer": "^7.0.4",
     "invariant": "^2.2.4",
     "lodash": "^4.5.0",
     "prop-types": "^15.6.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.5.4",
-    "babel-preset-expo": "~8.0.0",
     "@unimodules/core": "~5.0.0",
+    "babel-preset-expo": "~8.0.0",
     "expo-module-scripts": "~1.2.0"
   },
   "gitHead": "ec7878b9ce54f2537721218ae0fe4017e4004806"
